--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development node -r dotenv/config index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "joi": "^17.9.2",
     "morgan": "^1.10.0",
     "winston": "^3.9.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
