--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^7.0.1",
+    "http-errors": "^2.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
