--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development WINSTON_LOG_LEVEL=verbose node -r dotenv/config index.js"
+    "dev": "cross-env NODE_ENV=development WINSTON_LOG_LEVEL=verbose node -r dotenv/config index.js",
+    "prod": "pm2 start index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
