--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-handlebars": "^7.0.7",
     "express-validator": "^7.0.1",
+    "hbs": "^4.2.0",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "joi": "^17.9.2",
@@ -35,7 +37,6 @@
     "dotenv": "^16.3.1",
     "mocha": "^10.2.0",
     "moment": "^2.29.4",
-    "nodemon": "^3.0.1",
     "nyc": "^15.1.0",
     "supertest": "^6.3.3"
   }
